--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "html-loader": "^1.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
